@@ -1,7 +1,10 @@
 package gift.service;
 
+import gift.model.Member;
 import gift.model.Product;
 import gift.model.Wishlist;
+import gift.repository.MemberRepository;
+import gift.repository.ProductRepository;
 import gift.repository.WishlistRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
@@ -13,28 +16,35 @@ import java.util.stream.Collectors;
 public class WishlistService {
 
     private final WishlistRepository wishlistRepository;
+    private final MemberRepository memberRepository;
     private final ProductService productService;
 
-    public WishlistService(WishlistRepository wishlistRepository, ProductService productService) {
+    public WishlistService(WishlistRepository wishlistRepository, ProductService productService, MemberRepository memberRepository) {
         this.wishlistRepository = wishlistRepository;
         this.productService = productService;
+        this.memberRepository = memberRepository;
     }
 
     public List<Product> getWishlist(String email) {
-        List<Wishlist> wishlistItems = wishlistRepository.findByMemberEmail(email);
+        Member member = memberRepository.findByEmail(email);
+        List<Wishlist> wishlistItems = wishlistRepository.findByMember(member);
         return wishlistItems.stream()
-            .map(item -> productService.findProductsById(item.getProductId()))
-            .collect(Collectors.toList());
+            .map(Wishlist::getProduct)
+            .toList();
     }
 
     @Transactional
     public void addWishlist(String email, Long productId) {
-        Wishlist wishlist = new Wishlist(null, email, productId);
+        Member member = memberRepository.findByEmail(email);
+        Product product = productService.findProductsById(productId);
+        Wishlist wishlist = new Wishlist(null, member, product);
         wishlistRepository.save(wishlist);
     }
 
     @Transactional
     public void removeWishlist(String email, Long productId) {
-        wishlistRepository.deleteByMemberEmailAndProductId(email, productId);
+        Member member = memberRepository.findByEmail(email);
+        Product product = productService.findProductsById(productId);
+        wishlistRepository.deleteByMemberAndProduct(member, product);
     }
 }
